New Contact Page + Bug fixes

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -69,48 +69,45 @@
         <img src="../images/1.jpg" />
     </div>
 
-    <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+    <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px;">
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-md-12 animated2 fadeIn" style="display:block;">
+                <h1>"OwO, <a class="animationdelay2s" id="gradient">What</a> is this?"</h1>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-md-4 animated fadeIn" style="display:block;">
+            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
                 <div class="row">
-                    <div class="mx-auto d-block downloaddriver" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <h1 id="gradient">Downloads</h1>
-                        <hr />
-                        <div class="trackBar" style="margin-top: 50px;">
-                            <input id="tracker_button" onclick="v3download()" type="button" style="width: 250px;" value="AmusingKeypadV3 Application">
-                            <input id="tracker_button" onclick="prodownload()" type="button" style="width: 250px;margin:10px;" value="AmusingKeypadPro Application">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left;">
+                        <div style="margin-left: 25px; margin-right: 25px;">
+                            <p>If you have an issue with your order or you have some questions about the keypad. Join our discord server or contact us via e-mail!</p>
+                            <br />
+                            <p>Cheers, Dev Team~</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 animated fadeIn driverss" style="display:block;">
+
+            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
                 <div class="row">
-                    <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="ui-1.jpg" style="width:45%;margin-bottom:5px;">
-                        <img src="ui-2.jpg" style="width:45%;margin-bottom:5px;">
-                        <img src="ui-3.jpg" style="width:45%;margin-bottom:5px;">
-                        <img src="ui-4.jpg" style="width:45%;margin-bottom:5px;">
-                        <br />
-                        <img src="ui-key.jpg" style="width:65%;margin-bottom:5px;">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                        <a onclick="copyToClipboard('antecer@outlook.com')" id="contact_button">Copy mail to clipboard</a>
+                        <a target="_blank" href="https://discordapp.com/invite/3PVnNGu" id="contact_button">Join our Discord server</a>
+                        <a id="contact_button">FAQ</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
+                <div class="row">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                        <img style="width: 90%; height: auto; border-radius: 10px;" src="https://i.ytimg.com/vi/51G7iVlRUWs/maxresdefault.jpg" />
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+
         <hr style="margin-top: 70px;" />
-        <div class="row">
-            <div class="col-md-12" style="display:block;">
-                <div class="row">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" style="display:block;">
-                <div class="row">
-                </div>
-            </div>
-        </div>
     </div>
 </body>
 </html>
