--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated3 fadeInDown stickyfirst" role="navigation">
+    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
                 <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
@@ -42,13 +42,13 @@
                     <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
                     <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                     <li><a href="/customization"><i class="fas fa-palette"></i>Customization</a></li>
-                    <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
+                    <li><a href="/contact"><i class="fas fa-file-signature"></i>Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <nav id="navbar2" class="dropnavigation navbar animated3 fadeInDown stickyfirst">
+    <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
         <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
             <b>Antecer</b>
         </a>
