--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
                 <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                 <li><a href="/customization"><i class="fas fa-palette"></i>Customization</a></li>
-                <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
+                <li><a href="/contact"><i class="fas fa-file-signature"></i>Contact</a></li>
             </ul>
         </div>
     </nav>
