--- a/products/index.html
+++ b/products/index.html
@@ -71,41 +71,39 @@
 
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px;">
         <div class="row" style="margin-top: 20px;">
-            <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                <h1>"OwO, <a class="animationdelay2s" id="gradient">What</a> is this?"</h1>
+            <div class="col-md-12 animated2 fadeIn" style="display:none;"><!--CHECK SET DISPLAY BLOCK!-->
+                <h1>Is this the, <a class="animationdelay2s" id="gradient">only</a> thing we have?</h1>
             </div>
         </div>
+
         <div class="row">
-            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
+            <div class="col-md-12 animated fadeIn" style="display:block; margin-top: 50px;">
                 <div class="row">
-                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left;">
-                        <div style="margin-left: 25px; margin-right: 25px;">
-                            <p>If you have an issue with your order or you have some questions about the keypad. Join our discord server or contact us via e-mail!</p>
-                            <br />
-                            <p>Cheers, Dev Team~</p>
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                        <h1>Under construction!</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+            <div class="row">
+                <div class="col-md-12 animated fadeIn" style="display:block; margin-top: 50px;">
+                    <div class="row">
+                        <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left;">
+
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
-                <div class="row">
-                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
-                        <a onclick="copyToClipboard('antecer@outlook.com')" id="contact_button">Copy mail to clipboard</a>
-                        <a target="_blank" href="https://discordapp.com/invite/3PVnNGu" id="contact_button">Join our Discord server</a>
-                        <a id="contact_button">FAQ</a>
+                <div class="col-md-6 animated fadeIn" style="display:block; margin-top: 50px;">
+                    <div class="row">
+                        <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 animated fadeIn" style="display:block; margin-top: 50px;">
-                <div class="row">
-                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
-                        <img style="width: 90%; height: auto; border-radius: 10px;" src="https://i.ytimg.com/vi/51G7iVlRUWs/maxresdefault.jpg" />
-                    </div>
-                </div>
             </div>
-        </div>
 
         <hr style="margin-top: 70px;" />
     </div>
