--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="navbar-header hz-nav right">
                 <ul class="navbar-right">
                     <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-                    <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
+                    <li><a href="/products"><i class="fas fa-archive"></i>Products</a></li>
                     <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                     <li><a href="/customization"><i class="fas fa-palette"></i>Customization</a></li>
                     <li><a href="/contact"><i class="fas fa-file-signature"></i>Contact</a></li>
@@ -58,7 +58,7 @@
         <div class="collapse navbar-collapse cz-nav" id="collapsibleNavbar">
             <ul class="navbar-right">
                 <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
+                <li><a href="/products"><i class="fas fa-archive"></i>Products</a></li>
                 <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                 <li><a href="/customization"><i class="fas fa-palette"></i>Customization</a></li>
                 <li><a href="/contact"><i class="fas fa-file-signature"></i>Contact</a></li>
