--- a/review/index.html
+++ b/review/index.html
@@ -25,13 +25,15 @@
             $(window).scrollTop(0);
         });
     </script>
-</head>
-<body>
-    <?php
+
+    <script>
     if (isset($_GET['id']) && $_GET['id'] == 12) {
     console.log("hi")
     }
-    ?>
+    </script>
+</head>
+<body>
+    
     <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
