--- a/review/index.html
+++ b/review/index.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -25,15 +25,8 @@
             $(window).scrollTop(0);
         });
     </script>
-
-    <script>
-    if (isset($_GET['id']) && $_GET['id'] == 12) {
-    console.log("hi")
-    }
-    </script>
 </head>
 <body>
-    
     <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
@@ -77,6 +70,10 @@
     </div>
 
     <div class="container animated2 fadeIn" style="margin-top: 100px;">
+
+        <?php
+        print “<h1>Your IP address is ” . $_SERVER[‘REMOTE_ADDR’] . “</h1>”;
+        ?>
 
     </div>
 </body>
