--- a/review/index.html
+++ b/review/index.html
@@ -12,69 +12,48 @@
     <meta name="description" content="The AmusingKeypad is a keypad specially designed for the osu! game that allows the swapping of mechanical switches and easy portability.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
     <link href="../css/animate.css" rel="stylesheet" type="text/css">
+    <link href="../css/main.css" rel="stylesheet" type="text/css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../script/kawaii.js"></script>
 
-    <script>
-        $(window).on('beforeunload', function () {
-            $(window).scrollTop(0);
-        });
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-firestore.js"></script>
+
+    <script src="app.js"></script>
 </head>
 <body>
-    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
-        <div class="container" style="margin-top: 5px;">
-            <div class="navbar-header left">
-                <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
-                    <b>Antecer</b>
-                </a>
-            </div>
-
-            <div class="navbar-header hz-nav right">
-                <ul class="navbar-right">
-                    <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-                    <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
-                    <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
-                    <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
-                    <li><a href="../contact"><i class="fas fa-file-signature"></i>Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
-        <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
-            <b>Antecer</b>
-        </a>
-        <a onclick="clicksticky();" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span style="font-size: 25px;"><i class="fas fa-angle-down"></i></span>
-        </a>
-        <div class="collapse navbar-collapse cz-nav" id="collapsibleNavbar">
-            <ul class="navbar-right">
-                <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
-                <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
-                <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
-                <li><a href="../contact"><i class="fas fa-file-signature"></i>Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="bgoof">
-        <img src="../images/1.jpg" />
+    <div id="waiting" class="content animated fadeIn" style="display: block;">
+        <h1 id="gradient">Checking Tracking Number</h1>
     </div>
 
-    <div class="container animated2 fadeIn" style="margin-top: 100px;">
-
-        <?php
-        print “<h1>Your IP address is ” . $_SERVER[‘REMOTE_ADDR’] . “</h1>”;
-        ?>
-
+    <div id="notfound" class="content animated fadeIn" style="display: none;">
+        <h1 id="gradient">Tracking number not found</h1>
     </div>
+
+    <div id="found" class="content animated fadeIn" style="display: none;">
+        <h1 id="gradient">Being redirected</h1>
+    </div>
+
+    <style>
+        body {
+            background-color: black !important;
+            width: 100% !important;
+            height: 100% !important;
+        }
+
+        .content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+        }
+
+        h1 {
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
