--- a/review/index.html
+++ b/review/index.html
@@ -22,7 +22,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-firestore.js"></script>
 
-    <script src="app.js"></script>
+    <script src="apps.js"></script>
 </head>
 <body>
     <div id="waiting" class="content animated fadeIn" style="display: block;">
