--- a/review/review_form/index.html
+++ b/review/review_form/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="check" class="animated fadeIn" style="display: block">
+<html>
     <head>
         <meta charset="utf-8">
 
@@ -74,7 +74,7 @@
             <img src="../../images/1.jpg" />
         </div>
 
-        <div id="form_container" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px;">
+        <div id="form_container" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
             <div class="row">
                 <div class="col-md-12 animated2 fadeIn" style="display:block;">
                     <h2>Antecer's <a id="gradient">AmusingKeypad</a> Pro Review</h2>
