--- a/review/index.html
+++ b/review/index.html
@@ -22,7 +22,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-firestore.js"></script>
 
-    <script src="apps.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     <div id="waiting" class="content animated fadeIn" style="display: block;">
@@ -30,7 +30,7 @@
     </div>
 
     <div id="notfound" class="content animated fadeIn" style="display: none;">
-        <h1 id="gradient">Tracking number not found</h1>
+        <h1 id="gradient">Tracking number not valid</h1>
     </div>
 
     <div id="found" class="content animated fadeIn" style="display: none;">
