--- a/review/index.html
+++ b/review/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -27,6 +27,10 @@
 
     <div id="notfound" class="content animated fadeIn" style="display: none;">
         <h1 id="gradient">Tracking number not valid</h1>
+    </div>
+
+    <div id="already_filled" class="content animated fadeIn" style="display: none;">
+        <h1 id="gradient">You already have filled in this form. Thank you!</h1>
     </div>
 
     <div id="found" class="content animated fadeIn" style="display: none;">
