--- a/review/review_form/index.html
+++ b/review/review_form/index.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
 
-        <title>Antecer Review Form</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <meta name="author" content="Antecer">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-        <link href="../../bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="../../css/main.css" rel="stylesheet" type="text/css">
-        <link href="../../css/animate.css" rel="stylesheet" type="text/css">
+    <title>Antecer Review Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="author" content="Antecer">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="../../bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="../../css/main.css" rel="stylesheet" type="text/css">
+    <link href="../../css/animate.css" rel="stylesheet" type="text/css">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-        <script src="../../bootstrap/js/bootstrap.min.js"></script>
-        <script src="../../script/kawaii.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="../../bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../script/kawaii.js"></script>
 
-        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-firestore.js"></script>
 
-        <script src="app.js"></script>
+    <script src="app.js"></script>
 
-        <script>
-            $(window).on('beforeunload', function () {
-                $(window).scrollTop(0);
-            });
-        </script>
-    </head>
+    <script>
+        $(window).on('beforeunload', function () {
+            $(window).scrollTop(0);
+        });
+    </script>
+</head>
     <body id="body">
         <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
             <div class="container" style="margin-top: 5px;">
@@ -98,6 +98,11 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Issues (optional)</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <div class="form-group">
                             <label for="exampleFormControlTextarea1">Thoughts about the keypad (optional)</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
@@ -109,6 +114,9 @@
                     </form>
                 </div>
             </div>
+
+            <hr style="margin-top: 70px;" />
+
         </div>
 
         <div id="page_not_found" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
@@ -119,15 +127,16 @@
                     <a style="margin-top: 10px;" id="tracker_button" href="../../">Home</a>
                 </div>
                 <div class="col-md-6 animated fadeIn">
-                <div class="row">
-                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
-                        <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="../../idk.jpg" />
+                    <div class="row">
+                        <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                            <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="../../idk.jpg" />
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
 
             <hr style="margin-top: 70px;" />
+
         </div>
     </body>
 </html>
