--- a/review/review_form/index.html
+++ b/review/review_form/index.html
@@ -28,35 +28,16 @@
         });
     </script>
 </head>
-    <body id="body">
-        <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
-            <div class="container" style="margin-top: 5px;">
-                <div class="navbar-header left">
-                    <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
-                        <b>Antecer</b>
-                    </a>
-                </div>
-
-                <div class="navbar-header hz-nav right">
-                    <ul class="navbar-right">
-                        <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-                        <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
-                        <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
-                        <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
-                        <li><a href="../contact"><i class="fas fa-file-signature"></i>Contact</a></li>
-                    </ul>
-                </div>
+<body id="body">
+    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
+        <div class="container" style="margin-top: 5px;">
+            <div class="navbar-header left">
+                <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
+                    <b>Antecer</b>
+                </a>
             </div>
-        </nav>
 
-        <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
-            <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
-                <b>Antecer</b>
-            </a>
-            <a onclick="clicksticky();" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span style="font-size: 25px;"><i class="fas fa-angle-down"></i></span>
-            </a>
-            <div class="collapse navbar-collapse cz-nav" id="collapsibleNavbar">
+            <div class="navbar-header hz-nav right">
                 <ul class="navbar-right">
                     <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
@@ -65,78 +46,114 @@
                     <li><a href="../contact"><i class="fas fa-file-signature"></i>Contact</a></li>
                 </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <div class="bgoof">
-            <img src="../../images/1.jpg" />
+    <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
+        <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
+            <b>Antecer</b>
+        </a>
+        <a onclick="clicksticky();" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span style="font-size: 25px;"><i class="fas fa-angle-down"></i></span>
+        </a>
+        <div class="collapse navbar-collapse cz-nav" id="collapsibleNavbar">
+            <ul class="navbar-right">
+                <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="../products"><i class="fas fa-archive"></i>Products</a></li>
+                <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
+                <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
+                <li><a href="../contact"><i class="fas fa-file-signature"></i>Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="bgoof">
+        <img src="../../images/1.jpg" />
+    </div>
+
+    <div id="form_container" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
+        <div class="row">
+            <div class="col-md-12 animated2 fadeIn" style="display:block;">
+                <h2>Antecer's <a id="gradient">AmusingKeypad</a> Pro Review</h2>
+                <p style="margin-left: 10px;">Your opinion is very precious to us, so every opinion counts.</p>
+            </div>
+        </div>
+        <div class="row" style="margin-top: 50px;">
+            <div class="col-md-12 animated2 fadeIn" style="display:block;">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Name</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Overal rating from 1 to 5</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Issues (optional)</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Thoughts about the keypad (optional)</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <input id="tracker_button" onclick="" type="button" value="Submit form">
+                        <p style="margin-top: 10px;">Disclaimer: Submit does not work yet!</p>
+                    </div>
+                </form>
+            </div>
         </div>
 
-        <div id="form_container" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
-            <div class="row">
-                <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                    <h2>Antecer's <a id="gradient">AmusingKeypad</a> Pro Review</h2>
-                    <p style="margin-left: 10px;">Your opinion very precious to us, so every opinion counts.</p>
-                </div>
+        <hr style="margin-top: 70px;" />
+
+    </div>
+
+    <div id="page_not_found" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
+        <div class="row">
+            <div class="col-md-6 animated2 fadeIn" style="display:block;">
+                <h2>Page not found :(</h2>
+                <p>Do you want to go back to the home page?</p>
+                <a style="margin-top: 10px;" id="tracker_button" href="../../">Home</a>
             </div>
-            <div class="row" style="margin-top: 50px;">
-                <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                    <form>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Name</label>
-                            <input type="Name" class="form-control" id="exampleFormControlInput1" placeholder="Name">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Overal rating from 1 to 5</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Issues (optional)</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Thoughts about the keypad (optional)</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-
-                        <div class="form-group">
-                            <input id="tracker_button" onclick="" type="button" value="Submit form">
-                            <p style="margin-top: 10px;">Disclaimer: Submit does not work yet!</p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-
-            <hr style="margin-top: 70px;" />
-
-        </div>
-
-        <div id="page_not_found" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
-            <div class="row">
-                <div class="col-md-6 animated2 fadeIn" style="display:block;">
-                    <h2>Page not found :(</h2>
-                    <p>Do you want to go back to the home page?</p>
-                    <a style="margin-top: 10px;" id="tracker_button" href="../../">Home</a>
-                </div>
-                <div class="col-md-6 animated fadeIn">
-                    <div class="row">
-                        <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
-                            <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="../../idk.jpg" />
-                        </div>
+            <div class="col-md-6 animated fadeIn">
+                <div class="row">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                        <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="../../idk.jpg" />
                     </div>
                 </div>
             </div>
-
-            <hr style="margin-top: 70px;" />
-
         </div>
-    </body>
+
+        <hr style="margin-top: 70px;" />
+
+    </div>
+
+    <div id="thanks_form" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 200px; display: none">
+        <div class="row">
+            <div class="col-md-12 animated2 fadeIn" style="display:block;">
+                <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
+                    <h2>Thanks for <a id="gradient">filling</a> out this form</h2>
+                    <p style="margin-top: 20px;">Your review will get checked within 5-7 work days!</p>
+                    <p style="margin-top: 40px;">Do you want to go back to the home page?</p>
+                    <p><a style="margin-top: 10px;" id="tracker_button" href="../../">Home</a></p>
+                    <img style="width: 40%; height: auto; border-radius: 10px; margin-top: 20px;" src="thanks.gif" />
+                </div>
+            </div>
+        </div>
+
+        <hr style="margin-top: 70px;" />
+
+    </div>
+</body>
 </html>
