--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="script/particle/particles.js"></script>
     <script src="script/kawaii.js"></script>
 
     <script>
@@ -67,34 +68,33 @@
     </nav>
 
     <div class="banner-nav-img animated fadeIn">
-        <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
-            <div class="row">
-
-                <div class="col-md-5 animated fadeInLeft" style="display:block; margin-top: 100px;">
-                    <div class="row">
-                        <div class="mx-auto d-block marginamusingtext1" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                            <h1 id="gradient">Amusing Keypad</h1>
-                            <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
-                            <hr />
-                            <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Stubbs</a> & <a style="color: #f4c989 !important;">Antecer</a></p>
-                            <div class="trackBar" style="margin-top: 50px;">
-                                <input id="tracking_number" type="text" placeholder="Tracking Number">
-                                <input id="tracker_button" onclick="submit()" type="button" value="Track">
-                            </div>
-                        </div>
+    </div>
+    <div id="particles-js"></div>
+    <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+        <div class="row" style="margin-top: 100px;">
+            <div class="col-md-6 animated2 fadeIn" style="display:block;">
+                <div class="row">
+                    <div class="mx-auto d-block marginamusingtext1" style="justify-content: center; align-content: center; margin-bottom: auto;">
+                        <h1 id="gradient">Amusing Keypad</h1>
+                        <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
+                        <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Stubbs</a> & <a style="color: #f4c989 !important;">Antecer</a></p>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-md-7 animated fadeInRight marginlogo" style="display:block;">
-                    <div class="row">
-                        <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                            <img class="logo" src="images/7.png">
+            <div class="col-md-6 animated2 fadeIn" style="display:block;">
+                <div class="row">
+                    <div class="mx-auto d-block marginamusingtext1" style="justify-content: center; align-content: center; margin-bottom: auto;">
+                        <div class="trackBar" style="margin-top: 50px;">
+                            <input id="tracking_number" type="text" placeholder="Tracking Number">
+                            <input id="tracker_button" onclick="submit()" type="button" value="Track">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
 
