--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
     </nav>
 
     <div class="banner-nav-img animated fadeIn">
+        <div class="scrolldownarrow">
+            <a class="scrolldown"><i class="fas fa-chevron-down"></i></a>
+        </div>
     </div>
     <div id="particles-js"></div>
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
@@ -85,10 +88,12 @@
             <div class="col-md-6 animated2 fadeIn" style="display:block;">
                 <div class="row">
                     <div class="mx-auto d-block marginamusingtext1" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <div class="trackBar" style="margin-top: 50px;">
+                        <p style="text-shadow: 0px 0px 2px #000000; text-align: left; margin-top: 40px;">Track your package here!</p>
+                        <div class="trackBar" style="margin-top: 20px;">
                             <input id="tracking_number" type="text" placeholder="Tracking Number">
                             <input id="tracker_button" onclick="submit()" type="button" value="Track">
                         </div>
+                        <p style="opacity: 0.6; text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 30px;">Powered by 17track</p>
                     </div>
                 </div>
             </div>
