Country nn Link Added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
 
-        <hr style="margin-top: 70px;" />
+        <hr style="margin-top: 70px !important;" />
 
         <div class="row" style="margin-top: 20px;">
             <div class="col-md-12 animated2 fadeIn" style="display:block;">
