Added flag script

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
                     <b>Antecer</b>
                 </a>
+                <img id="flag" style="margin-top: 17px; height: 20px;"/>
             </div>
 
             <div class="navbar-header hz-nav right">
