--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
                     <b>Antecer</b>
                 </a>
-                <img id="flag" style="margin-top: 17px; height: 20px;"/>
+                <div style="margin-top: 17px; white-space: nowrap;">
+                    <img id="flag" class="animatedloop pulse" style="height: 20px;" />
+                    <span class="hovertext">Change country</span>
+                </div>
             </div>
 
             <div class="navbar-header hz-nav right">
@@ -51,9 +54,16 @@
     </nav>
 
     <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
-        <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
-            <b>Antecer</b>
-        </a>
+        <div class="navbar-header left">
+            <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon">
+                <b>Antecer</b>
+            </a>
+
+            <div style="margin-top: 17px; white-space: nowrap;">
+                <img id="flag2" class="animatedloop pulse" style="height: 20px;" />
+                <span class="hovertext2">Change country</span>
+            </div>
+        </div>
         <a onclick="clicksticky();" style="font-size: 25px;" data-toggle="collapse" data-target="#collapsibleNavbar">
             <i class="fas fa-angle-down"></i>
         </a>
