--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <script src="script/particle/particles.js"></script>
     <script src="script/kawaii.js"></script>
 
+    <style>
+        /* Important for the header!*/
+        html, body{
+            width: 100% !important;
+            height: 100% !important;
+        }
+    </style>
     <script>
         $(window).on('beforeunload', function () {
             $(window).scrollTop(0);
@@ -239,14 +246,154 @@
             </div>
         </div>
 
-        <hr style="margin-top: 70px;" />
+        <hr class="changecountryhr" style="margin-top: 70px;" />
 
         <div class="row">
-            <div class="col-md-12" style="display:block;">
+            <div class="col-md-12 animated2 fadeIn" style="display:block;">
+                <h4 class="animated fadeIn" style="margin-bottom: 20px; display:block; text-align: left">Change your <a class="animationdelay2s" id="gradient">location</a>!</h4>
+                <p class="animated fadeIn" style="display:block; text-align: left; margin-left: 20px; margin-right: 20px;">Set your shipping destination here. If your country is not listing below, select the "Global" option!</p>
+            </div>
+        </div>
+
+        <div class="row" style="white-space: nowrap !important; flex-wrap: nowrap !important;">
+            <div class="col-md-4" style="display:block;">
                 <div class="row">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
+                        <div class="changecountrytab">
+                            <img src="flags/au.png" /><a onclick="changeCountryTo('au')">Australia</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/at.png" /><a onclick="changeCountryTo('at')">Austria</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/be.png" /><a onclick="changeCountryTo('be')">Belgium</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/br.png" /><a onclick="changeCountryTo('br')">Brazil</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/ca.png" /><a onclick="changeCountryTo('ca')">Canada</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/hk.png" /><a onclick="changeCountryTo('hk')">China Hong Kong</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/dk.png" /><a onclick="changeCountryTo('dk')">Denmark</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/fi.png" /><a onclick="changeCountryTo('fi')">Finland</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/fr.png" /><a onclick="changeCountryTo('fr')">France</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/gr.png" /><a onclick="changeCountryTo('gr')">Greece</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/hu.png" /><a onclick="changeCountryTo('hu')">Hungary</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/id.png" /><a onclick="changeCountryTo('id')">Indonesia</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/ie.png" /><a onclick="changeCountryTo('ie')">Ireland</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="display:block;">
+                <div class="row">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
+                        <div class="changecountrytab">
+                            <img src="flags/il.png" /><a onclick="changeCountryTo('il')">Israel</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/it.png" /><a onclick="changeCountryTo('it')">Italy</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/jp.png" /><a onclick="changeCountryTo('jp')">Japan</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/kz.png" /><a onclick="changeCountryTo('kz')">Kazakhstan</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/kr.png" /><a onclick="changeCountryTo('kr')">Korea</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/lu.png" /><a onclick="changeCountryTo('lu')">Luxembourg</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/my.png" /><a onclick="changeCountryTo('my')">Malaysia</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/mx.png" /><a onclick="changeCountryTo('mx')">Mexico</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/nl.png" /><a onclick="changeCountryTo('nl')">Netherlands</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/nz.png" /><a onclick="changeCountryTo('nz')">New Zealand</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/no.png" /><a onclick="changeCountryTo('no')">Norway</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/pl.png" /><a onclick="changeCountryTo('pl')">Poland</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/pt.png" /><a onclick="changeCountryTo('pt')">Portugal</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="display:block;">
+                <div class="row">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
+                        <div class="changecountrytab">
+                            <img src="flags/ru.png" /><a onclick="changeCountryTo('ru')">Russia</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/sa.png" /><a onclick="changeCountryTo('sa')">Saudi Arabia</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/sg.png" /><a onclick="changeCountryTo('sg')">Singapore</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/es.png" /><a onclick="changeCountryTo('es')">Spain</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/se.png" /><a onclick="changeCountryTo('se')">Sweden</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/ch.png" /><a onclick="changeCountryTo('ch')">Switzerland</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/th.png" /><a onclick="changeCountryTo('th')">Thailand</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/tr.png" /><a onclick="changeCountryTo('tr')">Turkey</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/ua.png" /><a onclick="changeCountryTo('ua')">Ukraine</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/gb.png" /><a onclick="changeCountryTo('gb')">United Kingdom</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/us.png" /><a onclick="changeCountryTo('us')">United States</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/vn.png" /><a onclick="changeCountryTo('vn')">Vietnam</a>
+                        </div>
+                        <div class="changecountrytab">
+                            <img src="flags/gl.png" /><a onclick="changeCountryTo('gl')">Global</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <hr style="margin-top: 40px;" />
+
         <div class="row">
             <div class="col-md-12" style="display:block;">
                 <div class="row">
