--- a/contact/index.html
+++ b/contact/index.html
@@ -34,7 +34,7 @@
                     <b>Antecer</b>
                 </a>
                 <div style="margin-top: 17px; white-space: nowrap;">
-                    <img id="flag" class="animatedloop pulse" style="height: 20px;" />
+                    <img id="flag" style="height: 20px;" />
                     <span class="hovertext">Change country</span>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <b>Antecer</b>
             </a>
             <div style="margin-top: 17px; white-space: nowrap;">
-                <img id="flag" class="animatedloop pulse" style="height: 20px;" />
+                <img id="flag2" style="height: 20px;" />
                 <span class="hovertext">Change country</span>
             </div>
         </div>
