--- a/driver/index.html
+++ b/driver/index.html
@@ -58,7 +58,7 @@
             </a>
             <div style="margin-top: 17px; white-space: nowrap;">
                 <img id="flag2" style="height: 20px;" />
-                <span class="hovertext">Change country</span>
+                <span class="hovertext2">Change country</span>
             </div>
         </div>
         <a onclick="clicksticky();" data-toggle="collapse" data-target="#collapsibleNavbar">
