--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@
     </nav>
 
     <div class="banner-nav-img animated fadeIn">
+        <div class="banner-nav-text module" style="justify-content: center; align-content: center; margin-bottom: auto;">
+            <h2 style="text-align: left;"><a id="gradient">Antecer's</a> official website!</h2>
+            <p style="margin-top: 10px;"> A custom made mechanical keypad for osu with hotswappable switches. Compatible with everyswitch that contains of 2 pins. </p>
+            <p style="font-size: 12px; margin-top: 10px;"> Scroll down for more </p>
+        </div>
         <div class="scrolldownarrow">
             <a class="scrolldown"><i class="fas fa-chevron-down"></i></a>
         </div>
     </div>
+
     <div id="particles-js"></div>
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
         <div class="row" style="margin-top: 100px;">
@@ -255,7 +261,7 @@
             </div>
         </div>
 
-        <div class="row" style="white-space: nowrap !important; flex-wrap: nowrap !important;">
+        <div class="row" style="flex-wrap: nowrap !important;">
             <div class="col-md-4" style="display:block;">
                 <div class="row">
                     <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
