--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </a>
         <div class="collapse navbar-collapse cz-nav" id="collapsibleNavbar">
             <ul class="navbar-right">
-                <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="/"><i class="fas fa-home"></i>Home</a></li> 
                 <li><a href="/products"><i class="fas fa-archive"></i>Products</a></li>
                 <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                 <li><a href="/customization"><i class="fas fa-palette"></i>Customization</a></li>
@@ -86,10 +86,10 @@
     </nav>
 
     <div class="banner-nav-img animated fadeIn">
-        <div class="banner-nav-text module" style="justify-content: center; align-content: center; margin-bottom: auto;">
-            <h2 style="text-align: left;"><a id="gradient">Antecer's</a> official website!</h2>
-            <p style="margin-top: 10px;"> A custom made mechanical keypad for osu with hotswappable switches. Compatible with everyswitch that contains of 2 pins. </p>
-            <p style="font-size: 12px; margin-top: 10px;"> Scroll down for more </p>
+        <div class="banner-nav-text" style="justify-content: center; align-content: center; margin-bottom: auto;">
+            <h1 id="rQuote">Amusing Device</h1>
+            <hr style="width: 250px; opacity: 1; color: white;"/>
+            <p style="font-size: 12px; margin-top: 20px;"> Scroll down for more </p>
         </div>
         <div class="scrolldownarrow">
             <a class="scrolldown"><i class="fas fa-chevron-down"></i></a>
