Updates + Clean up

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="col-md-6 animated2 fadeIn" style="display:block;">
                 <div class="row">
                     <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="idk.png" />
+                        <img src="images/idk.png" />
                     </div>
                 </div>
             </div>
