--- a/review/review_form/index.html
+++ b/review/review_form/index.html
@@ -130,7 +130,7 @@
             <div class="col-md-6 animated fadeIn">
                 <div class="row">
                     <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: center;">
-                        <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="../../idk.jpg" />
+                        <img style="width: 90%; height: auto; border-radius: 10px; margin-top: 20px;" src="idk.jpg" />
                     </div>
                 </div>
             </div>
