Image compressed for web

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <div class="banner-nav-img animated fadeIn">
         <div class="banner-nav-text" style="justify-content: center; align-content: center; margin-bottom: auto;">
             <h1 id="rQuote">Amusing Device</h1>
-            <hr style="width: 250px; opacity: 1; color: white;"/>
+            <hr style="width: 250px; opacity: 1; color: white; margin-bottom: 20px !important;" />
+            <p style="font-size: 12px;"> Don't forget to change your country on the top left corner by clicking on the flag! </p>
             <p style="font-size: 12px; margin-top: 20px;"> Scroll down for more </p>
         </div>
         <div class="scrolldownarrow">
