--- a/products/index.html
+++ b/products/index.html
@@ -99,7 +99,7 @@
                                 <p>Latest AmusingKeypad with RGB and hot swappable Cherry MX Switches.</p>
                                 <p>Starting price: $33.60</p>
                                 <div style="margin-top: 50px;">
-                                    <a href="/2-key-amusing-keypad" id="contact_button">View more</a>
+                                    <a href="2-key-amusing-keypad" id="contact_button">View more</a>
                                 </div>
                             </div>
                         </div>
