Updated image credit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a class="scrolldown"><i class="fas fa-chevron-down"></i></a>
         </div>
         <p style="font-size: 12px; margin: 20px; position: absolute; transform: translate(-50%, -200%); bottom: 0; right: 0;">
-            Image: © ????
+            Image: © LEN[A-7]
         </p>
     </div>
 
