--- a/products/2-key-amusing-keypad/index.html
+++ b/products/2-key-amusing-keypad/index.html
@@ -153,7 +153,7 @@
 
                <table>
                 <tbody><tr>
-                    <td><input type="hidden" name="on0" value="Package Type">Choose your oackage</td>
+                    <td><input type="hidden" name="on0" value="Package Type">Choose your Package</td>
                 </tr>
                 <tr>
                     <td>
