--- a/products/2-key-amusing-keypad/index.html
+++ b/products/2-key-amusing-keypad/index.html
@@ -36,7 +36,7 @@
     </script>
    
 </head>
-<body <script id="dsq-count-scr" src="//antecer.disqus.com/count.js" async></script>>
+<body <script id="dsq-count-scr" src="//antecer.disqus.com/count.js" async></script>
 
     <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
