--- a/products/2-key-amusing-keypad/index.html
+++ b/products/2-key-amusing-keypad/index.html
@@ -197,7 +197,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             <div class="col-md-12 animated2 fadeIn" style="margin-top: auto;">
                 <div id="disqus_thread"></div>
                 <script>
