--- a/products/2-key-amusing-keypad/index.html
+++ b/products/2-key-amusing-keypad/index.html
@@ -399,8 +399,8 @@
                     })();
 
                     var disqus_config = function () {
-                        this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                        this.page.url = "https://steve2312.github.io/products/2-key-amusing-keypad/"; // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = "https://steve2312.github.io/products/2-key-amusing-keypad/"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                     }
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
