--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="script/particle/particles.js"></script>
-    <script src="script/kawaii.js"></script>
+    <script src="script/app.js"></script>
+    <script src="script/home.js"></script>
 
     <style>
         /* Important for the header!*/
-        html, body{
+        html, body {
             width: 100% !important;
             height: 100% !important;
         }
