--- a/products/index.html
+++ b/products/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../script/kawaii.js"></script>
+    <script src="../script/app.js"></script>
 
     <script>
         $(window).on('beforeunload', function () {
