--- a/products/2-key-amusing-keypad/checkout/index.html
+++ b/products/2-key-amusing-keypad/checkout/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="row" style="margin-top: 20px;">
             <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                <form>
+                <form id="shopping">
                     <div class="form-row" style="margin-bottom: 1em;">
                         <div class="col">
                             <label for="inputAddress">First name*</label>
